--- a/app/components-react/widgets/reactive-widget/ReactiveWidgetTriggerDetails.m.less
+++ b/app/components-react/widgets/reactive-widget/ReactiveWidgetTriggerDetails.m.less
@@ -65,3 +65,12 @@
     margin: 0;
   }
 }
+
+:global(.ant-collapse-extra) {
+  :global(.ant-form-item) {
+    margin-bottom: 0;
+  }
+  :global(.ant-form-item-control-input) {
+    min-height: 0;
+  }
+}
