rename reactive widget to game pulse

--- a/app/components-react/widgets/game-pulse/GamePulse.m.less
+++ b/app/components-react/widgets/game-pulse/GamePulse.m.less
@@ -1,4 +1,4 @@
-.reactive-widget {
+.game-pulse-widget {
   height: 100%;
   width: calc(100% - 3px); // scrollbar fix for widget layout component
   :global(.ant-layout-content > :last-child) {
