--- a/app/components-react/shared/DisplayToggle.m.less
+++ b/app/components-react/shared/DisplayToggle.m.less
@@ -5,10 +5,11 @@
 .display-toggle {
   text-transform: none;
   font-weight: 400;
+  margin-left: 10px;
 
   i {
     line-height: unset;
-    margin-right: 10px;
+    margin-left: 10px;
   }
 
   i.active:not(.disabled) {
