WIP: Factory API migration, highlighter.

--- a/app/components-react/highlighter/ClipPreview.m.less
+++ b/app/components-react/highlighter/ClipPreview.m.less
@@ -17,6 +17,11 @@
   border-radius: 10px;
 }
 
+&.vertical-preview {
+  margin: 0px 110px;
+  border-radius: unset !important;
+}
+
 .deleted-preview {
   border-radius: 10px;
   background: black;
