--- a/app/components-react/windows/go-live/DestinationSwitchers.m.less
+++ b/app/components-react/windows/go-live/DestinationSwitchers.m.less
@@ -86,6 +86,10 @@
   padding: 0px 15px;
 }
 
+.switch-wrapper:last-child {
+  padding-bottom: 55px;
+}
+
 .platform-switcher:last-child {
   margin-bottom: 0px;
 }
