--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('../../media/fonts/icomoon.woff') format('woff');
+  src: url('../../media/fonts/icomoon2.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
