--- a/app/components-react/widgets/common/WidgetLayout.m.less
+++ b/app/components-react/widgets/common/WidgetLayout.m.less
@@ -86,6 +86,20 @@
     }
   }
 
+  :global(.ant-modal-footer) {
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-end;
+    gap: 16px;
+
+    :global(.ant-modal-footer-extra) {
+      flex: 1;
+      display: flex;
+      align-items: stretch;
+      justify-content: flex-start;
+      gap: 16px;
+    }
+  }
 
   // content
   .content-wrapper {
