pr(widgets): address feedback

--- a/app/components-react/widgets/common/WidgetLayout.m.less
+++ b/app/components-react/widgets/common/WidgetLayout.m.less
@@ -86,13 +86,13 @@
     }
   }
 
-  :global(.ant-modal-footer) {
+  .modal-footer {
     display: flex;
     align-items: stretch;
     justify-content: flex-end;
     gap: 16px;
 
-    :global(.ant-modal-footer-extra) {
+    .modal-footer-extra {
       flex: 1;
       display: flex;
       align-items: stretch;
