feat(controls): add callout control

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -9,6 +9,7 @@
 @yellow-light: #A96311;
 @blue-dark: #36ADE0;
 @blue-light: #2B5BD7;
+@blue-2-dark: #72D5FF;
 @cyan: #00F2EA;
 @pink-dark: #EB7777;
 @pink-light: #C22571;
