--- a/app/themes.g.less
+++ b/app/themes.g.less
@@ -12,13 +12,20 @@
   --teal-hover: lighten(@teal-light, 4%);
   --accent: @purple-light;
   --blue: @blue-light;
+  --callout: @blue-dark;
+  --callout-semi: fade(@blue-light, 8%);
+  --callout-border: fade(@blue-light, 20%);
+  --callout-hover: lighten(@blue-light, 4%);
+  --callout-button-bg: fade(@blue-light, 36%);
   --warning: @red-light;
   --warning-semi: fade(@red-light, 8%);
+  --warning-border: fade(@red-light, 20%);
   --warning-hover: lighten(@red-light, 4%);
   --warning-bg: fade(@red-light, 28%);
   --warning-button-bg: fade(@red-light, 36%);
   --info: @yellow-light;
   --info-semi: fade(@yellow-light, 8%);
+  --info-border: fade(@yellow-light, 20%);
   --red: @red-light;
   --red-semi: fade(@red-light, 8%);
   --icon: @light-5;
@@ -116,6 +123,11 @@
   --teal-hover: darken(@teal-dark, 4%);
   --accent: @purple-dark;
   --blue: @blue-dark;
+  --callout: @blue-2-dark;
+  --callout-semi: fade(@blue-2-dark, 20%);
+  --callout-hover: lighten(@blue-2-dark, 4%);
+  --callout-bg: fade(@blue-2-dark, 8%);
+  --callout-button-bg: fade(@blue-2-dark, 36%);
   --warning: @red-dark;
   --warning-hover: darken(@red-dark, 4%);
   --warning-bg: fade(@red-dark, 28%);
