feat(multistream): add ultra features page

--- a/app/components-react/shared/ButtonHighlighted.m.less
+++ b/app/components-react/shared/ButtonHighlighted.m.less
@@ -58,6 +58,15 @@ button.highlighted {
       padding-box !important;
   }
 
+  &.filled-dark,
+  &.filled-dark:hover,
+  &.filled-dark:active,
+  &.filled-dark:focus,
+  &.filled-dark:visited {
+    background: linear-gradient(123.53deg, #2de8b0 0%, #cbe953 48.8%, #ffab48 75.86%, #ff5151 100%)
+      padding-box !important;
+  }
+
   &.faded,
   &.faded:active,
   &.faded:focus,
