pr: address feedback

--- a/app/themes.g.less
+++ b/app/themes.g.less
@@ -206,6 +206,11 @@
   --teal-hover: darken(@prime-dark, 4%);
   --accent: @prime-dark;
   --blue: @blue-dark;
+  --callout: @blue-2-dark;
+  --callout-semi: fade(@blue-2-dark, 20%);
+  --callout-hover: lighten(@blue-2-dark, 4%);
+  --callout-bg: fade(@blue-2-dark, 8%);
+  --callout-button-bg: fade(@blue-2-dark, 36%);
   --warning: @red-dark;
   --warning-hover: darken(@red-dark, 4%);
   --warning-bg: fade(@red-dark, 28%);
@@ -284,6 +289,11 @@
   --teal-hover: lighten(@prime-light, 4%);
   --accent: @prime-light;
   --blue: @blue-light;
+  --callout: @blue-dark;
+  --callout-semi: fade(@blue-light, 8%);
+  --callout-border: fade(@blue-light, 20%);
+  --callout-hover: lighten(@blue-light, 4%);
+  --callout-button-bg: fade(@blue-light, 36%);
   --warning: @red-light;
   --warning-hover: lighten(@red-light, 4%);
   --warning-bg: fade(@red-light, 28%);
