--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -21,6 +21,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.icon-game-pulse:before {
+  content: "\ea32";
+}
 .icon-ai:before {
   content: "\ea2f";
 }
