undo icon for gamepulse (temp)

--- a/app/styles/custom-icons.less
+++ b/app/styles/custom-icons.less
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('../../media/fonts/icomoon2.woff') format('woff');
+  src: url('../../media/fonts/icomoon.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -21,9 +21,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-reactive-widgets:before {
-  content: "\ea30";
-}
+
 .icon-ai:before {
   content: "\ea2f";
 }
