--- a/app/components-react/widgets/game-pulse/GamePulse.m.less
+++ b/app/components-react/widgets/game-pulse/GamePulse.m.less
@@ -1,6 +1,9 @@
 .game-pulse-widget {
   height: 100%;
   width: calc(100% - 3px); // scrollbar fix for widget layout component
+  :global(.ant-layout-content) {
+    margin-left: 1px; // sidebar border fix for widget layout with source preview
+  }
   :global(.ant-layout-content > :last-child) {
     padding-top: 16px !important; // box padding reset for widget layout component
   }
